fixes
Player spire not showing with shrunk layout in some circumstances
autojobs formatting on scientists? Swear I didn't touch this but this works better.
fix label formatting on steam
fix domination icons (hello stray space)

--- a/css/style.css
+++ b/css/style.css
@@ -7631,3 +7631,10 @@ input[type="checkbox"] {
     -moz-appearance: none;
 	appearance: none;
 }
+
+label {
+	display: inline !important;
+	max-width: inherit !important;
+	margin-bottom: inherit !important;
+	font-weight: inherit !important;
+  }
